[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/font/ttf/Hack-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://gui/PauseScreen.gd" type="Script" id=2]
[ext_resource path="res://gui/Options.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/font/ttf/Hack-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_top = 5
border_width_bottom = 5
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing_size = 2

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0.188235 )
border_width_top = 5
border_width_bottom = 5
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing_size = 2

[sub_resource type="Theme" id=4]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 2 )
Button/styles/pressed = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="PauseScreen" type="CanvasLayer"]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.756863 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseScreen" type="HBoxContainer" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 4 )
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
bg_color_rect_path = NodePath("../ColorRect")

[node name="PauseMenu" type="VBoxContainer" parent="PauseScreen"]
margin_left = 785.0
margin_right = 1135.0
margin_bottom = 1080.0
rect_min_size = Vector2( 350, 0 )
custom_constants/separation = 10
alignment = 1

[node name="Resume" type="Button" parent="PauseScreen/PauseMenu"]
margin_top = 425.0
margin_right = 350.0
margin_bottom = 495.0
rect_min_size = Vector2( 0, 70 )
focus_mode = 0
custom_fonts/font = SubResource( 5 )
text = "Resume"

[node name="Options" type="Button" parent="PauseScreen/PauseMenu"]
margin_top = 505.0
margin_right = 350.0
margin_bottom = 575.0
rect_min_size = Vector2( 0, 70 )
focus_mode = 0
custom_fonts/font = SubResource( 5 )
text = "Options"

[node name="Quit" type="Button" parent="PauseScreen/PauseMenu"]
margin_top = 585.0
margin_right = 350.0
margin_bottom = 655.0
rect_min_size = Vector2( 0, 70 )
focus_mode = 0
custom_fonts/font = SubResource( 5 )
text = "Quit"

[node name="Options" parent="PauseScreen" instance=ExtResource( 3 )]
visible = false
margin_left = 837.0
margin_right = 1437.0
margin_bottom = 1080.0
can_reset_save = false

[node name="OptionsGoBack" type="Button" parent="PauseScreen/Options"]
margin_top = 641.0
margin_right = 600.0
margin_bottom = 698.0
rect_min_size = Vector2( 0, 57 )
focus_mode = 0
theme = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
text = "Back"
[connection signal="pressed" from="PauseScreen/PauseMenu/Resume" to="PauseScreen" method="_on_StartGame_pressed"]
[connection signal="pressed" from="PauseScreen/PauseMenu/Options" to="PauseScreen" method="_on_Options_pressed"]
[connection signal="pressed" from="PauseScreen/PauseMenu/Quit" to="PauseScreen" method="_on_Quit_pressed"]
[connection signal="pressed" from="PauseScreen/Options/OptionsGoBack" to="PauseScreen" method="_on_OptionsGoBack_pressed"]
